<resources>
    <string name="app_name">Exam</string>

    // Splash
    <string name="idSplashText">eXam</string>

    // SignIn
    <string name="idTextSignIn">.autentificare</string>
    <string name="buttonProf">Proful</string>
    <string name="buttonElev">Elevul</string>
    <string name="contentDescriptionSignIn">Aici este poza pentru pagina de SignIn</string>

    // About
    <string name="idTitleAbout">.despre_noi</string>
    <string name="idDescriptionAbout">Ne plac tool-urile de calitate si de aceea, astazi va recomandam "glide".\n\nRapid si eficient in incarcarea imaginilor de pe Internet!</string>

    // Contact
    <string name="idTitleContact">.contact</string>
    <string name="idAdresa">ADRESA: TIMISOARA\nStr. Dorobantilor, nr. 3</string>
    <string name="idTelefon">TELEFON: 0311.302.903</string>

    <string name="item_intrebare">Intrebarea ta este: <font color='#FF0000'>*</font></string>
    <string name="item_categoria">Categoria <font color='#FF0000'>*</font></string>
    <string name="item_raspuns1">Raspunsul numarul 1: <font color='#FF0000'>*</font></string>
    <string name="item_raspuns2">Raspunsul numarul 2: <font color='#FF0000'>*</font></string>

    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Detalii intrebare</string>
    <string name="add_fragment_title">Adauga o noua intrebare</string>
    <string name="edit_fragment_title">Editeaza intrebarea</string>

    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="call">Call</string>

    <string name="atentie">Atentie!</string>
    <string name="delete_question">Sigur vrei sa stergi intrebarea</string>
    <string name="no">Nu</string>
    <string name="yes">Da</string>

    <string name="edit_item">Editeaza intrebarea</string>
    <string name="add_new_item">Adauga o noua intrebare</string>

    <string name="phoneNumber">0311302903</string>

    <string name="donaldduck">Sir Donald Duck</string>
    <string name="ddemail">dd@gmail.com</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="categoria">Categoria:</string>
    <string name="date">Data</string>
    <string name="CategRV">Categoria:</string>

    <string name="aboutMe">Despre noi</string>

</resources>