<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Views.SignInActivity"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/idButtonProf"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="-100dp"
            android:background="@drawable/rounded_button"
            android:elevation="2dp"
            android:fontFamily="sans-serif-light"
            android:paddingHorizontal="50dp"
            android:text="@string/buttonProf"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/idButtonElev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:elevation="2dp"
            android:fontFamily="sans-serif-light"
            android:paddingHorizontal="50dp"
            android:text="@string/buttonElev"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/idButtonProf"
            app:layout_constraintStart_toStartOf="@+id/idButtonProf"
            app:layout_constraintTop_toBottomOf="@+id/idButtonProf" />

        <TextView
            android:id="@+id/idTextSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/idTextSignIn"
            android:fontFamily="cursive"
            android:textSize="36sp"
            android:textColor="@color/white"

            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/contentDescriptionSignIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>